--- a/public/adminlte/assets/css/pages/extra_pages.css
+++ b/public/adminlte/assets/css/pages/extra_pages.css
@@ -144,7 +144,8 @@ iframe {
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(255, 255, 255, 0.9); }
+ 
+}
 
 .wrap-login100 {
   width: 500px;
