--- a/src/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/src/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -1,8 +1,9 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
+{{ form_start(form, {'method': 'post', 'action': path('admin_save_user'), 'attr': {'class': 'fos_user_registration_register'}}) }}
     {{ form_widget(form) }}
     <div>
+    <br/>
         <input type="submit" value="{{ 'registration.submit'|trans }}" />
     </div>
 {{ form_end(form) }}
