--- a/templates/clientes/_form.html.twig
+++ b/templates/clientes/_form.html.twig
@@ -1,4 +1,9 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+
+    <br/>
+    <button class="btn btn-success">{{ button_label|default('Guardar') }}</button>
+
+    <a class="btn btn-default" href="{{ path('clientes_index') }}">Volver a la Lista</a>
+
 {{ form_end(form) }}
