--- a/templates/clientes/edit.html.twig
+++ b/templates/clientes/edit.html.twig
@@ -1,13 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Clientes{% endblock %}
+{% block content_title %}Editar Cliente{% endblock %}
 
 {% block main %}
-    <h1>Edit Clientes</h1>
+    
+    {{ include('clientes/_form.html.twig', {'button_label': 'Guardar'}) }}
+	<br/>
+	{{ include('clientes/_delete_form.html.twig') }}
 
-    {{ include('clientes/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('clientes_index') }}">back to list</a>
-
-    {{ include('clientes/_delete_form.html.twig') }}
 {% endblock %}
