--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -204,7 +204,7 @@
 
                         <section id="main" class="content-body">
                             {% for message in app.flashes('success') %}
-                             <div class="alert bg-pink alert-success" role="alert">
+                             <div class="alert alert-success" role="alert">
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                     <span aria-hidden="true">×</span>
                                 </button>
@@ -239,7 +239,6 @@
         {% endblock wrapper %}
         
 
-        {% block body_javascript %}
         
         <script src="{{asset('adminlte/assets/js/app.min.js')}}"></script>
         <!-- Custom Js -->
@@ -259,6 +258,8 @@
         <script src="{{asset('adminlte/assets/js/form.min.js')}}"></script>
         <script src="{{asset('adminlte/assets/js/pages/forms/advanced-form-elements.js')}}"></script>
 
+        {% block body_javascript %}
+       
         {% endblock body_javascript %}
 
     </body>
