--- a/templates/clientes/show.html.twig
+++ b/templates/clientes/show.html.twig
@@ -87,6 +87,8 @@
 </div>
 </div>
 </div>
+{% if (wallet_flotilla) %}
+
 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
     <div class="card">
         <div class="header bg-cyan ">
@@ -96,7 +98,7 @@
             
         </div>
         <div class="card-body ">
-           <h2>$ 20,000 MX</h2>
+           <h2>$ {{wallet_cliente.saldo |number_format(2)}} MX</h2>
 
         </div>
         <div class="card-footer">
@@ -109,6 +111,7 @@
 
     </div>
     </div>
+  {% endif%}  
 </div>
 
 
@@ -123,17 +126,20 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form>
+                <form id="form_agregar_saldo" action="{{path('cliente_actualizar_saldo',{id:cliente.id})}}" method="POST">
+                    <input type="hidden" name="wallet_flotilla" id="wallet_flotilla" value="{{wallet_flotilla.id}}" >
+                    <input type="hidden" name="wallet_cliente" id="wallet_cliente" value="{{wallet_cliente.id}}" >
+                    <input type="hidden" name="accion" value="agregar">
                     <label for="email_address">Saldo Wallet Flotilla</label>
                     <div class="form-group">
                         <div class="form-line">
-                            <input type="text" id="email_address1" class="form-control" placeholder="Enter your email address" value="$200,000 MX">
+                            <input type="text" id="saldo_flotilla" class="form-control" readonly="true" placeholder="" value="$ {{wallet_flotilla.saldo|number_format(2)}} MX">
                         </div>
                     </div>
                     <label for="password">Valor a transferir</label>
                     <div class="form-group">
                         <div class="form-line">
-                            <input type="number" id="valor_transferencia" class="form-control" placeholder="$ valor en pesos mexicanos">
+                            <input type="number" min="0" max="{{wallet_flotilla.saldo}}"" id="saldo_wallet" name="valor" class="form-control" placeholder="$ valor en pesos mexicanos">
                         </div>
                     </div>
 
@@ -142,7 +148,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-info waves-effect">Guardar</button>
+                <button type="button" class="btn btn-success waves-effect" id="btn_save_transferencia">Guardar</button>
                 <button type="button" class="btn btn-danger waves-effect" data-dismiss="modal">Cancelar</button>
             </div>
         </div>
@@ -162,17 +168,21 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form>
+                <form id="form_quitar_saldo" action="{{path('cliente_actualizar_saldo',{id:cliente.id})}}" method="POST">
+                    <input type="hidden" name="wallet_flotilla" id="wallet_flotilla" value="{{wallet_flotilla.id}}" >
+                    <input type="hidden" name="wallet_cliente" id="wallet_cliente" value="{{wallet_cliente.id}}" >
+                    <input type="hidden" name="accion" value="quitar">
+
                     <label for="email_address">Saldo Wallet Cliente</label>
                     <div class="form-group">
                         <div class="form-line">
-                            <input type="text" id="email_address1" class="form-control" placeholder="Enter your email address" value="$200,000 MX">
+                            <input type="text" readonly="true" id="frm_quitar_saldo_wallet_cliente" class="form-control" placeholder="" value="{{wallet_cliente.saldo|number_format(2)}} MX" >
                         </div>
                     </div>
-                    <label for="password">Valor a transferir</label>
+                    <label for="password">Valor a descontar</label>
                     <div class="form-group">
                         <div class="form-line">
-                            <input type="number" id="valor_transferencia" class="form-control" placeholder="$ valor en pesos mexicanos">
+                            <input type="number" name="valor" id="frm_quitar_saldo_cliente" class="form-control" placeholder="$ valor en pesos mexicanos">
                         </div>
                     </div>
 
@@ -181,7 +191,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-info waves-effect">Guardar</button>
+                <button type="button" class="btn btn-success waves-effect" id="btn_save_quitar_saldo">Guardar</button>
                 <button type="button" class="btn btn-danger waves-effect" data-dismiss="modal">Cancelar</button>
             </div>
         </div>
@@ -190,3 +200,83 @@
 </div>
 
 {% endblock %}
+
+{% block body_javascript %}
+<script type="text/javascript">
+    $(document).ready(function(){
+       
+
+        $('#form_agregar_saldo').validate({
+        rules: {
+            'saldo_wallet': {
+                required: true,
+                min:1,
+                max:1000000
+            },
+        },
+        messages:{
+            'saldo_wallet':{
+                required:'Ingresa el saldo a transferir',
+                min:'Ingresa un valor valido',
+                max:'El valor a transferir no debe superar el de la wallet de la flotilla'
+            }
+        },
+        highlight: function (input) {
+            $(input).parents('.form-line').addClass('error');
+        },
+        unhighlight: function (input) {
+            $(input).parents('.form-line').removeClass('error');
+        },
+        errorPlacement: function (error, element) {
+            $(element).parents('.form-group').append(error);
+        }
+    });
+
+
+    $('#form_quitar_saldo').validate({
+        rules: {
+            'valor': {
+                required: true,
+                min:1,
+                max:$('#frm_quitar_saldo_wallet_cliente').val()
+            },
+        },
+        messages:{
+            'valor':{
+                required:'Ingresa el saldo a transferir',
+                min:'Ingresa un valor valido',
+                max:'El valor a transferir no debe superar el saldo actual'
+            }
+        },
+        highlight: function (input) {
+            $(input).parents('.form-line').addClass('error');
+        },
+        unhighlight: function (input) {
+            $(input).parents('.form-line').removeClass('error');
+        },
+        errorPlacement: function (error, element) {
+            $(element).parents('.form-group').append(error);
+        }
+    });
+
+    $("#btn_save_transferencia").click(function(e){
+        e.preventDefault();
+        var valid=$('#form_agregar_saldo').valid();
+        if(valid){
+            $('#form_agregar_saldo').submit();
+        }
+    })
+
+    $("#btn_save_quitar_saldo").click(function(e){
+        e.preventDefault();
+        var valid=$('#form_quitar_saldo').valid();
+        if(valid){
+            $('#form_quitar_saldo').submit();
+        }
+    })
+
+    })
+
+</script>
+{% endblock body_javascript %}
+
