--- a/templates/clientes/_form.html.twig
+++ b/templates/clientes/_form.html.twig
@@ -1,5 +1,17 @@
+<div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="card">
+
+        <div class="header">
+            <h2>
+                <strong>Formulario Clientes</strong>
+            </h2>
+            
+        </div>
+    <div class="card-body table-responsive">
+
 {{ form_start(form) }}
-    {{ form_widget(form) }}
+{{ form_widget(form) }}
 
     <br/>
     <button class="btn btn-success">{{ button_label|default('Guardar') }}</button>
@@ -7,3 +19,11 @@
     <a class="btn btn-default" href="{{ path('clientes_index') }}">Volver a la Lista</a>
 
 {{ form_end(form) }}
+{% if eliminar %}
+<br/><br/>
+	{{ include('clientes/_delete_form.html.twig') }}
+{% endif %}
+</div>
+</div>
+</div>
+</div>
