cambios en formulario new and tables para admin

--- a/public/adminlte/assets/css/style.css
+++ b/public/adminlte/assets/css/style.css
@@ -8989,7 +8989,7 @@ readers do not read off random characters that represent icons */
   font-size: 18px; }
 
 .form-control-label {
-  text-align: right; }
+  text-align: left; }
   .form-control-label label {
     margin-top: 8px; }
 
