--- a/src/Resources/FOSUserBundle/views/layout.html.twig
+++ b/src/Resources/FOSUserBundle/views/layout.html.twig
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Roxa - Bootstrap 4 Admin Dashboard Template</title>
+    <title>Login Permergas</title>
     <!-- Favicon-->
     <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
 
@@ -27,7 +27,7 @@
             
 
         </div>
-            
+             
         <div>
             {% block fos_user_content %}
             {% endblock fos_user_content %}
