--- a/templates/flotillas/new.html.twig
+++ b/templates/flotillas/new.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
    
-    {{ include('flotillas/_form.html.twig') }}
+    {{ include('flotillas/_form.html.twig',{delete:false}) }}
 
 {% endblock %}
