--- a/templates/flotillas/index.html.twig
+++ b/templates/flotillas/index.html.twig
@@ -2,41 +2,86 @@
 
 {% block content_title %}Listado Flotillas{% endblock %}
 
-{% block body %}
-    
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nombre</th>
-                <th>Documento</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for flotilla in flotillas %}
-            <tr>
-                <td>{{ flotilla.id }}</td>
-                <td>{{ flotilla.nombre }}</td>
-                <td>{{ flotilla.documento }}</td>
-                <td>{{ flotilla.createdAt ? flotilla.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ flotilla.updatedAt ? flotilla.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td class="actions">
-                    <a href="{{ path('flotillas_show', {'id': flotilla.id}) }}">ver</a> | 
-                    <a href="{{ path('flotillas_edit', {'id': flotilla.id}) }}">editar</a> |  
-                    <a href="{{ path('flotillas_usuarios', {'id': flotilla.id}) }}">usuarios</a>
-                    
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
 
-    <a class="btn btn-default" href="{{ path('flotillas_new') }}">Nueva Flotilla</a>
+{% block global_actions %}
+<div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+        <div class="form-action form-action-search  action-search">
+            <form method="get" action="/admin/flotillas">
+                <input type="hidden" name="action" value="search">
+                <input type="hidden" name="entity" value="Flotillas">
+                <input type="hidden" name="submenuIndex" value="">
+                <div class="form-group">
+                    <div class="form-widget">
+                        <input class="form-control" type="search" name="query" value="{{query}}" placeholder="Buscar">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="button-action">
+            <a class="btn btn-default" href="{{ path('flotillas_new') }}">Nueva Flotilla</a> 
+        </div>
+    </div>
+</div>
+
+{% endblock %}
+
+{% block main %}
+<div class="row">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<div class="card">
+
+    <div class="header">
+        <h2>
+            <strong>Lista Flotillas</strong>
+        </h2>
+    </div>
+    <div class="card-body table-responsive">
+        <table class="table table-condensed">
+            <thead>
+                <thead>
+                    <tr>
+                        <th>{{ knp_pagination_sortable(pagination, 'Id', 'f.id') }}</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'Nombre', 'f.nombre') }}</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'Documento', 'f.documento') }}</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'Fecha Creación', 'f.createdAt') }}</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'Fecha Actualización', 'f.updatedAt') }}</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for flotilla in flotillas %}
+                    <tr>
+                        <td>{{ flotilla.id }}</td>
+                        <td>{{ flotilla.nombre }}</td>
+                        <td>{{ flotilla.documento }}</td>
+                        <td>{{ flotilla.createdAt ? flotilla.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                        <td>{{ flotilla.updatedAt ? flotilla.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                        <td class="actions">
+                            
+                            <a href="{{ path('flotillas_edit', {'id': flotilla.id}) }}">
+                             <i class="fa fa-fw fa-pencil"></i>    
+                            </a> 
+                            <a href="{{ path('flotillas_show', {'id': flotilla.id}) }}">
+                                <i class="fa fa-fw fa-eye"></i>
+                            </a> 
+
+                            <!--<a title="usuarios" href="{{ path('flotillas_usuarios', {'id': flotilla.id}) }}">
+                                <i class="fa fa-fw fa-user"></i>
+                            </a>
+                            !-->
+                        </td>
+                    </tr>
+                    {% else %}
+                    <tr>
+                        <td colspan="6">no records found</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div> 
+</div>
+</div> 
 {% endblock %}
