--- a/templates/flotillas/show.html.twig
+++ b/templates/flotillas/show.html.twig
@@ -1,9 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Flotillas{% endblock %}
+{% block content_title %}Flotillas{% endblock %}
 
 {% block body %}
-    <h1>Flotillas</h1>
+   <div class="row">
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+    <div class="card">
+        <div class="header">
+            <h2>
+                <strong>{{flotilla.nombre}}</strong>
+            </h2>
+            
+        </div>
+    <div class="card-body table-responsive">
+    <table class="table table-condensed">
 
     <table class="table">
         <tbody>
@@ -31,9 +41,13 @@
     </table>
 
   
-    <a class="btn btn-default" href="{{ path('flotillas_edit', {'id': flotilla.id}) }}">Editar</a>
+    <a class="btn btn-success" href="{{ path('flotillas_edit', {'id': flotilla.id}) }}">Editar</a>
       <a class="btn" href="{{ path('flotillas_index') }}">Volver a la lista</a>
 
     <br/><br/>
     {{ include('flotillas/_delete_form.html.twig') }}
+
+</div>
+</div>
+</div>
 {% endblock %}
