--- a/templates/flotillas/index.html.twig
+++ b/templates/flotillas/index.html.twig
@@ -67,10 +67,10 @@
                                 <i class="fa fa-fw fa-eye"></i>
                             </a> 
 
-                            <!--<a title="usuarios" href="{{ path('flotillas_usuarios', {'id': flotilla.id}) }}">
+                            <a title="usuarios" href="{{ path('flotillas_usuarios', {'id': flotilla.id}) }}">
                                 <i class="fa fa-fw fa-user"></i>
                             </a>
-                            !-->
+                            
                         </td>
                     </tr>
                     {% else %}
