--- a/templates/flotillas/nuevo_usuario.html.twig
+++ b/templates/flotillas/nuevo_usuario.html.twig
@@ -2,7 +2,19 @@
 
 {% block content_title %} Nuevo Usuario Flotillas{% endblock %}
 
+
 {% block body %}
+<div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="card">
+
+        <div class="header">
+            <h2>
+                <strong>Formulario Flotillas</strong>
+            </h2>
+            
+        </div>
+    <div class="card-body table-responsive">
    
   <form name="fos_user_registration" method="post" action="{{path('flotillas_usuarios_save')}}">
   	<input type="hidden" name="flotilla_id" value="{{flotilla.id}}" >
@@ -22,4 +34,10 @@
         <a class="btn " href="{{path('flotillas_usuarios',{id:flotilla.id})}}">Volver a la lista</a>
     </div>
 </form>
+
+</div>
+
+</div>
+</div>
+</div>
 {% endblock %}
