--- a/templates/flotillas/usuarios.html.twig
+++ b/templates/flotillas/usuarios.html.twig
@@ -2,9 +2,43 @@
 
 {% block content_title %}Usuarios Flotilla ({{flotilla.nombre}}){% endblock %}
 
-{% block body %}
-    
-    <table class="table">
+{% block global_actions %}
+<div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+        <div class="form-action form-action-search  action-search">
+            <form method="get" action="/admin/flotillas/usuarios/{{flotilla.id}}">
+                <input type="hidden" name="action" value="search">
+                <input type="hidden" name="entity" value="Flotillas">
+                <input type="hidden" name="submenuIndex" value="">
+                <div class="form-group">
+                    <div class="form-widget">
+                        <input class="form-control" type="search" name="query" value="{{query}}" placeholder="Buscar">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="button-action">
+             <a class="btn btn-default" href="{{ path('flotillas_usuarios_new',{id:flotilla.id}) }}">Nuevo Usuario Flotilla</a>
+
+        </div>
+    </div>
+</div>
+
+{% endblock %}
+
+{% block main %}
+<div class="row">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<div class="card">
+
+    <div class="header">
+        <h2>
+            <strong>Lista Usuarios Flotilla</strong>
+        </h2>
+    </div>
+    <div class="card-body table-responsive">
+        <table class="table table-condensed">
         <thead>
             <tr>
                 <th>Id</th>
@@ -21,7 +55,9 @@
                 <td>{{ usuario.email }}</td>
                 <td>{{ usuario.username }}</td>
                 <td>
-                    <a href="{{ path('flotillas_usuarios_delete', {'id': usuario.id}) }}">borrar</a>
+                    <a title="eliminar" href="{{ path('flotillas_usuarios_delete', {'id': usuario.id}) }}">
+                          <i class="fa fa-fw fa-trash"></i>
+                    </a>
                     
                 </td>
             </tr>
@@ -32,8 +68,9 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a class="btn btn-default" href="{{ path('flotillas_usuarios_new',{id:flotilla.id}) }}">Nuevo Usuario Flotilla</a>
-
-     <a class="btn" href="{{ path('flotillas_index')}}">Volver al listado</a>
+  </div>
+    </div> 
+</div>
+</div>
+   
 {% endblock %}
