--- a/templates/punto_venta/_delete_form.html.twig
+++ b/templates/punto_venta/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('punto_venta_delete', {'id': punto_ventum.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ punto_ventum.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger">Eliminar</button>
 </form>
