--- a/templates/punto_venta/show.html.twig
+++ b/templates/punto_venta/show.html.twig
@@ -1,9 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}PuntoVenta{% endblock %}
+{% block content_title %}Punto De Venta{% endblock %}
 
 {% block body %}
-    <h1>PuntoVenta</h1>
+    <div class="row">
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+    <div class="card">
+        <div class="header">
+            <h2>
+                <strong>Punto de Venta ({{punto_ventum.nombres}})</strong>
+            </h2>
+            
+        </div>
+    <div class="card-body table-responsive">
+    <table class="table table-condensed">
 
     <table class="table">
         <tbody>
@@ -42,9 +52,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('punto_venta_index') }}">back to list</a>
+    <a class="btn btn-success" href="{{ path('punto_venta_edit', {'id': punto_ventum.id}) }}">Editar</a>
 
-    <a href="{{ path('punto_venta_edit', {'id': punto_ventum.id}) }}">edit</a>
+     <a class="btn btn-default" href="{{ path('punto_venta_index') }}">Volver al Listado</a>
 
     {{ include('punto_venta/_delete_form.html.twig') }}
 {% endblock %}
