change puntos venta menu

--- a/templates/home/menu_admin.html.twig
+++ b/templates/home/menu_admin.html.twig
@@ -47,7 +47,7 @@
     </a>
 </li>
  <li>
-    <a href="{{asset('/admin/?action=list&entity=PuntosVenta')}}">
+    <a href="{{asset('/admin/puntos/venta')}}">
         <i class="far fa-calendar"></i>
         <span>Puntos de Venta</span>
     </a>
