add usuario flotilla y delete usuario flotilla

--- a/templates/punto_venta/index.html.twig
+++ b/templates/punto_venta/index.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}PuntoVenta index{% endblock %}
-
+{% block content_title %}Puntos Venta{% endblock %}
 
 {% block global_actions %}
 <div class="row">
