cambios para puntos de venta y gasolineras

--- a/src/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/src/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -9,7 +9,7 @@
                         <img alt="" src="{{asset('adminlte/assets/images/loading.png')}}">
                     </span>
                     <span class="login100-form-title p-b-34 p-t-27">
-                        Login
+                        Ingreso Permergas
                     </span>
                     {% for message in app.flashes('bad') %}
                 <div class="alert bg-pink alert-dismissible" role="alert">
@@ -31,7 +31,7 @@
                     <div class="contact100-form-checkbox">
                         <div class="form-check">
                             <label class="form-check-label">
-                                <input class="form-check-input" id="remember_me" name="_remember_me" type="checkbox" value="on"> Remember me
+                                <input class="form-check-input" id="remember_me" name="_remember_me" type="checkbox" value="on"> Recordarme
                                 <span class="form-check-sign">
                                     <span class="check"></span>
                                 </span>
@@ -41,12 +41,12 @@
                     </div>
                     <div class="container-login100-form-btn">
                         <button class="login100-form-btn">
-                            Login
+                            Enviar
                         </button>
                     </div>
                     <div class="text-center p-t-50">
                         <a class="txt1" href="forgot-password.html">
-                            Forgot Password?
+                            Recuperar Contraseña
                         </a>
                     </div>
                 </form>
