--- a/templates/vendedores/edit.html.twig
+++ b/templates/vendedores/edit.html.twig
@@ -3,5 +3,5 @@
 {% block content_title %}Editar Punto De Venta{% endblock %}
 
 {% block body %}
-    {{ include('punto_venta/_form.html.twig', {'button_label': 'Actualizar',eliminar:true}) }}
+    {{ include('vendedores/_form.html.twig', {'button_label': 'Actualizar',eliminar:true}) }}
 {% endblock %}
