--- a/templates/vendedores/show.html.twig
+++ b/templates/vendedores/show.html.twig
@@ -56,5 +56,5 @@
 
      <a class="btn btn-default" href="{{ path('punto_venta_index') }}">Volver al Listado</a>
 
-    {{ include('punto_venta/_delete_form.html.twig') }}
+    {{ include('vendedores/_delete_form.html.twig') }}
 {% endblock %}
