--- a/templates/vendedores/_delete_form.html.twig
+++ b/templates/vendedores/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('punto_venta_delete', {'id': punto_ventum.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('vendedor_delete', {'id': punto_ventum.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ punto_ventum.id) }}">
     <button class="btn btn-danger">Eliminar</button>
