--- a/templates/vendedores/_form.html.twig
+++ b/templates/vendedores/_form.html.twig
@@ -14,13 +14,13 @@
     {{ form_widget(form) }}
     <button class="btn btn-success">{{ button_label|default('Guardar') }}</button>
 
-     <a class="btn btn-default" href="{{ path('punto_venta_index') }}">Volver al listado</a>
+     <a class="btn btn-default" href="{{ path('vendedor_index') }}">Volver al listado</a>
 
 {{ form_end(form) }}
 
 {% if(eliminar) %}
 <br/>
-    {{ include('punto_venta/_delete_form.html.twig') }}
+    {{ include('vendedores/_delete_form.html.twig') }}
 
 {% endif%}
 </div>
