--- a/templates/vendedores/index.html.twig
+++ b/templates/vendedores/index.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block content_title %}Puntos Venta{% endblock %}
+{% block content_title %}Vendedores{% endblock %}
 
 {% block global_actions %}
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
         <div class="form-action form-action-search  action-search">
-            <form method="get" action="/admin/punto/venta">
+            <form method="get" action="/admin/vendedores">
                 <input type="hidden" name="action" value="search">
                 <input type="hidden" name="entity" value="Flotillas">
                 <input type="hidden" name="submenuIndex" value="">
@@ -19,7 +19,7 @@
             </form>
         </div>
         <div class="button-action">
-            <a class="btn btn-default" href="{{ path('punto_venta_new') }}">Nuevo Punto Venta</a> 
+            <a class="btn btn-default" href="{{ path('vendedor_new') }}">Nuevo Punto Venta</a> 
         </div>
     </div>
 </div>
@@ -33,7 +33,7 @@
 
     <div class="header">
         <h2>
-            <strong>Lista Puntos Venta</strong>
+            <strong>Lista Vendedores</strong>
         </h2>
     </div>
     <div class="card-body table-responsive">
@@ -52,7 +52,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for punto_ventum in punto_ventas %}
+        {% for punto_ventum in vendedores %}
             <tr>
                 <td>{{ punto_ventum.id }}</td>
                 <td>{{ punto_ventum.documento }}</td>
@@ -63,11 +63,11 @@
                 <td>{{ punto_ventum.createdAt ? punto_ventum.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ punto_ventum.updatedAt ? punto_ventum.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                     <a href="{{ path('punto_venta_edit', {'id': punto_ventum.id}) }}">
+                     <a href="{{ path('vendedor_edit', {'id': punto_ventum.id}) }}">
                          <i class="fa fa-fw fa-pencil"></i>
                      </a>
 
-                    <a href="{{ path('punto_venta_show', {'id': punto_ventum.id}) }}">
+                    <a href="{{ path('vendedor_show', {'id': punto_ventum.id}) }}">
                         <i class="fa fa-fw fa-eye"></i>
                     </a>
                    
