--- a/templates/vendedores/new.html.twig
+++ b/templates/vendedores/new.html.twig
@@ -3,5 +3,5 @@
 {% block content_title %}Nuevo Punto De Venta{% endblock %}
 
 {% block body %}
-    {{ include('punto_venta/_form.html.twig',{eliminar:false}) }}
+    {{ include('vendedores/_form.html.twig',{eliminar:false}) }}
 {% endblock %}
