--- a/templates/clientes/index.html.twig
+++ b/templates/clientes/index.html.twig
@@ -27,8 +27,80 @@
 {% endblock %}
 
 {% block main %}
+
+<div class="row clearfix">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <div class="card">
+        <div class="header">
+            <h2>
+                <strong>Busqueda Avanzada</strong>
+            </h2>
+           
+        </div>
+        <div class="body">
+            <form id="frm-clientes-avanzado">
+                <div class="row clearfix">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
+                        <div class="form-group">
+                            <div class="form-line">
+                              <select name="tipo_cliente" id="tipo_cliente">
+                                    <option value="">Tipo Cliente</option>
+                                    <option value="1" {% if tipo_cliente==1 %} selected='true' {% endif %}>Cliente Wallet</option>
+                                    <option value="2" {% if tipo_cliente==2 %} selected='true' {% endif %}>Cliente Flotilla</option>
+                              </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
+                       <div class="form-group">
+                            <div class="form-line">
+                              <select name="estado" id="estado">
+                                    <option value="">Estado</option>
+                                    <option value="1" {% if estado==1 %} selected='true' {% endif %}>Activo   </option>
+                                   
+                                     <option value="0" {% if estado==0 %} selected='true' {% endif %}>Suspendido</option>
+                                    
+                              </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
+                       <div class="form-group">
+                            <div class="form-line">
+                              <select name="delegacion" id="delegacion">
+                                    <option value="">Delegación</option>
+                                   {% for delegacion in delegaciones %}
+                                   <option {% if delegacion_form==delegacion.id %} selected='true' {% endif %}< value="{{delegacion.id}}">{{delegacion.municipio}}</option>
+                                   {% endfor %}
+                              </select>
+                            </div>
+                        </div>
+                    </div>
+                  
+                </div>
+                <div class="row clearfix">
+                        <div class="row">
+                          
+                            <div class="col-lg-6">
+                                <button type="submit" class="btn btn-primary btn-lg m-l-15 waves-effect">Buscar</button>
+                            </div>
+                             <div class="col-lg-6">
+                                <button type="button" id="btn-reset" class="btn btn-danger btn-lg m-l-15 waves-effect">Borrar</button>
+                            </div>
+                        
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+</div>
+
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+       
+
         <div class="card">
 
         <div class="header">
@@ -48,9 +120,10 @@
                 <th>{{ knp_pagination_sortable(pagination, 'Email', 'c.email') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'Celular', 'c.celular') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'Placa', 'c.placa') }}</th>
-                <th>{{ knp_pagination_sortable(pagination, 'Fecha Registro', 'c.createdAt') }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'Fecha', 'c.createdAt') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'Tipo', 'c.tipo') }}</th>
-                <th>Acciones</th>
+                <th>{{ knp_pagination_sortable(pagination, 'Estado', 'c.estado') }}</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -65,6 +138,7 @@
                 <td>{{ cliente.placa }}</td>
                 <td>{{ cliente.createdAt ? cliente.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ tipo[cliente.tipo] }}</td>
+                <td>{{ cliente.estado }}</td>
                 <td>
                     <a href="{{ path('clientes_edit', {'id': cliente.id}) }}">
                         <i class="fa fa-fw fa-pencil"></i>
@@ -77,7 +151,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="16">no records found</td>
+                <td colspan="16">Sin Resultados</td>
             </tr>
         {% endfor %}
         </tbody>
@@ -88,5 +162,23 @@
         </div>
 </div>
 </div>
+
+{% endblock %}
+
+{% block body_javascript %}
+
+<script type="text/javascript">
+  $(document).ready(function(){
+     $("#btn-reset").click(function(e){
+        e.preventDefault();
+        $('#tipo_cliente').val("");
+        $('#delegacion').val("");
+        $('#frm-clientes-avanzado').submit();
+     })
+  })
+ 
+</script>
+ 
+
 {% endblock %}
 
