--- a/templates/puntos_venta/new.html.twig
+++ b/templates/puntos_venta/new.html.twig
@@ -1,11 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New PuntosVenta{% endblock %}
+{% block content_title %}Nuevo Punto Venta{% endblock %}
 
 {% block body %}
-    <h1>Create new PuntosVenta</h1>
-
-    {{ include('puntos_venta/_form.html.twig') }}
-
-    <a href="{{ path('puntos_venta_index') }}">back to list</a>
+    <h1>Crear Nuevo Punto Venta</h1>
+    {{ include('puntos_venta/_form.html.twig',{eliminar:false}) }}
 {% endblock %}
