--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -99,14 +99,14 @@
                                 <ul class="user_dw_menu">
                                     <li>
                                         <a href="javascript:void(0);">
-                                            <i class="material-icons">person</i>Profile
+                                            <i class="material-icons">person</i>Perfil
                                         </a>
                                     </li>
                                    
                                     
                                     <li>
                                         <a href="{{asset('logout')}}">
-                                            <i class="material-icons">power_settings_new</i>Logout
+                                            <i class="material-icons">power_settings_new</i>Salir
                                         </a>
                                     </li>
                                 </ul>
@@ -134,9 +134,9 @@
                         </div>
                         <div class="profile-usertitle">
                             <div class="sidebar-userpic-name"> {{ app.user.username }} </div>
-                            <div class="profile-usertitle-job ">Manager </div>
+                            
                         </div>
-                        <div class="sidebar-userpic-btn">
+                       <!-- <div class="sidebar-userpic-btn">
                             <a class="tooltips" href="{{asset('profile')}}" data-toggle="tooltip" title="Profile">
                                 <i class="far fa-user sidebarQuickIcon"></i>
                             </a>
@@ -146,6 +146,7 @@
                                 <i class="fas fa-sign-out-alt sidebarQuickIcon"></i>
                             </a>
                         </div>
+                        !-->
                     </li>
                     <li class="header">Menú</li>
                    
