--- a/templates/home/menu_admin.html.twig
+++ b/templates/home/menu_admin.html.twig
@@ -28,7 +28,7 @@
     </a>
 </li>
  <li>
-    <a href="{{asset('/admin/?action=list&entity=Gasolineras')}}">
+    <a href="{{asset('/admin/gasolineras')}}">
         <i class="far fa-calendar"></i>
         <span>Gasolineras</span>
     </a>
