--- a/templates/gasolineras/index.html.twig
+++ b/templates/gasolineras/index.html.twig
@@ -71,7 +71,7 @@
                     </a>
 
                      <a href="{{ path('puntos_venta_list_gasolinera', {'id': gasolinera.id}) }}">
-                          <i class="fa fa-fw fa-user"></i> 
+                          <i class="fa fa-fw fa-shopping-basket"></i> 
                      </a>
                 </td>
             </tr>
