--- a/templates/home/menu_admin.html.twig
+++ b/templates/home/menu_admin.html.twig
@@ -1,17 +1,9 @@
 <li>
-    <a href="javascript:void(0);" class="menu-toggle">
-        <i class="fas fa-user"></i>
+
+    <a href="{{asset('/admin/usuarios')}}">
+        <i class="far fa-user"></i>
         <span>Usuarios</span>
     </a>
-    <ul class="ml-menu">
-        <li class="active">
-            <a href="{{asset('/admin/?action=list&entity=FosUser')}}">Listar Usuarios</a>
-        </li>
-        <li>
-            <a href="{{asset('/admin/new/user')}}">Nuevo Usuario</a>
-        </li>
-        
-    </ul>
 </li>
 
 <li>
