--- a/templates/gasolineras/index.html.twig
+++ b/templates/gasolineras/index.html.twig
@@ -70,6 +70,10 @@
                          <i class="fa fa-fw fa-eye"></i> 
                     </a>
 
+                    <a href="{{ path('gasolineras_usuarios', {'id': gasolinera.id}) }}">
+                         <i class="fa fa-fw fa-user"></i> 
+                    </a>
+
                      <a href="{{ path('puntos_venta_list_gasolinera', {'id': gasolinera.id}) }}">
                           <i class="fa fa-fw fa-shopping-basket"></i> 
                      </a>
