--- a/templates/clientes/new.html.twig
+++ b/templates/clientes/new.html.twig
@@ -2,6 +2,9 @@
 
 {% block content_title %}Nuevo Cliente{% endblock %}
 
+{% block busqueda_general %}
+{% endblock %}
+
 {% block main %}
     {{ include('clientes/_form.html.twig',{eliminar:false}) }}
 {% endblock %}
