--- a/templates/flotillas/edit.html.twig
+++ b/templates/flotillas/edit.html.twig
@@ -2,6 +2,9 @@
 
 {% block content_title %}Editar Flotillas{% endblock %}
 
+{% block busqueda_general %}
+{% endblock %}
+
 {% block body %}
     
     {{ include('flotillas/_form.html.twig', {'button_label': 'Guardar','delete':true}) }}
