--- a/templates/flotillas/index.html.twig
+++ b/templates/flotillas/index.html.twig
@@ -2,30 +2,33 @@
 
 {% block content_title %}Listado Flotillas{% endblock %}
 
+{% block busqueda_general %}
 
-{% block global_actions %}
-<div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-        <div class="form-action form-action-search  action-search">
-            <form method="get" action="/admin/flotillas">
-                <input type="hidden" name="action" value="search">
-                <input type="hidden" name="entity" value="Flotillas">
-                <input type="hidden" name="submenuIndex" value="">
-                <div class="form-group">
-                    <div class="form-widget">
-                        <input class="form-control" type="search" name="query" value="{{query}}" placeholder="Buscar">
-                    </div>
-                </div>
-            </form>
-        </div>
-        <div class="button-action">
-            <a class="btn btn-default" href="{{ path('flotillas_new') }}">Nueva Flotilla</a> 
-        </div>
+    <div class="search-box">
+        <form method="get" action="/admin/flotillas">
+            <input type="hidden" name="action" value="search">
+            <input id="search" type="search" name="query" value="" placeholder="Buscar">
+            <button class="icon">
+                <i class="fa fa-search"></i>
+            </button>
+        </form>
     </div>
-</div>
 
 {% endblock %}
+
+
+{% block global_actions %}
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="button-action">
+                <a class="btn btn-default" href="{{ path('flotillas_new') }}">Nueva Flotilla</a>
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
+
 
 {% block main %}
 <div class="row">
