--- a/templates/flotillas/new.html.twig
+++ b/templates/flotillas/new.html.twig
@@ -2,6 +2,9 @@
 
 {% block content_title %}Nueva Flotilla{% endblock %}
 
+{% block busqueda_general %}
+{% endblock %}
+
 {% block body %}
    
     {{ include('flotillas/_form.html.twig',{delete:false}) }}
