--- a/templates/flotillas/usuarios.html.twig
+++ b/templates/flotillas/usuarios.html.twig
@@ -2,22 +2,22 @@
 
 {% block content_title %}Usuarios Flotilla ({{flotilla.nombre}}){% endblock %}
 
+{% block busqueda_general %}
+
+    <div class="search-box">
+        <form method="get" action="/admin/flotillas/usuarios/{{flotilla.id}}">
+            <input type="hidden" name="action" value="search">
+            <input id="search" type="search" name="query" value="" placeholder="Buscar">
+            <button class="icon">
+                <i class="fa fa-search"></i>
+            </button>
+        </form>
+    </div>
+{% endblock %}
+
 {% block global_actions %}
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-        <div class="form-action form-action-search  action-search">
-            <form method="get" action="/admin/flotillas/usuarios/{{flotilla.id}}">
-                <input type="hidden" name="action" value="search">
-                <input type="hidden" name="entity" value="Flotillas">
-                <input type="hidden" name="submenuIndex" value="">
-                <div class="form-group">
-                    <div class="form-widget">
-                        <input class="form-control" type="search" name="query" value="{{query}}" placeholder="Buscar">
-                    </div>
-                </div>
-            </form>
-        </div>
         <div class="button-action">
              <a class="btn btn-default" href="{{ path('flotillas_usuarios_new',{id:flotilla.id}) }}">Nuevo Usuario Flotilla</a>
 
