--- a/templates/gasolineras/edit.html.twig
+++ b/templates/gasolineras/edit.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %}Editar Gasolinera{% endblock %}
 
+{% block busqueda_general %}
+{% endblock %}
+
 {% block body %}
    
     {{ include('gasolineras/_form.html.twig', {'button_label': 'Actualizar','delete':true}) }}
