--- a/templates/gasolineras/index.html.twig
+++ b/templates/gasolineras/index.html.twig
@@ -2,22 +2,24 @@
 
 {% block content_title %}Gasolineras{% endblock %}
 
+{% block busqueda_general %}
+
+    <div class="search-box">
+        <form method="get" action="/admin/gasolineras">
+            <input type="hidden" name="action" value="search">
+            <input id="search" type="search" name="query" value="" placeholder="Buscar">
+            <button class="icon">
+                <i class="fa fa-search"></i>
+            </button>
+        </form>
+    </div>
+
+{% endblock %}
+
 {% block global_actions %}
+
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-        <div class="form-action form-action-search  action-search">
-            <form method="get" action="/admin/gasolineras">
-                <input type="hidden" name="action" value="search">
-                <input type="hidden" name="entity" value="Flotillas">
-                <input type="hidden" name="submenuIndex" value="">
-                <div class="form-group">
-                    <div class="form-widget">
-                        <input class="form-control" type="search" name="query" value="" placeholder="Buscar">
-                    </div>
-                </div>
-            </form>
-        </div>
         <div class="button-action">
             <a class="btn btn-default" href="{{ path('gasolineras_new') }}">Nueva Gasolinera</a> 
         </div>
