--- a/templates/gasolineras/new.html.twig
+++ b/templates/gasolineras/new.html.twig
@@ -2,6 +2,9 @@
 
 {% block content_title %}Nueva Gasolineras{% endblock %}
 
+{% block busqueda_general %}
+{% endblock %}
+
 {% block body %}
     {{ include('gasolineras/_form.html.twig',{'delete':false}) }}
 {% endblock %}
