--- a/templates/usuarios/edit.html.twig
+++ b/templates/usuarios/edit.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %}Edit FosUser{% endblock %}
 
+{% block busqueda_general %}
+{% endblock %}
+
 {% block body %}
     <h1>Edit FosUser</h1>
 
