--- a/templates/flotillas/usuarios.html.twig
+++ b/templates/flotillas/usuarios.html.twig
@@ -19,7 +19,7 @@
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="button-action">
-             <a class="btn btn-default" href="{{ path('flotillas_usuarios_new',{id:flotilla.id}) }}">Nuevo Usuario Flotilla</a>
+             <a class="btn btn-default" href="{{ path('flotillas_usuarios_new',{id:flotilla.id}) }}">Nuevo Administrador Flotilla</a>
 
         </div>
     </div>
