email y formularios recuperar contraseña

--- a/templates/emails/reset_password.html.twig
+++ b/templates/emails/reset_password.html.twig
@@ -423,7 +423,7 @@ MODULE ROW section for each content block.
 													<h3>Recuperar contraseña.</h3>
 													<div id="resumen">
 													<p>
-													Para restablecer tu contraseña, por favor visita da clic <a href="{{link}}">aqui<a/>
+													Para restablecer tu contraseña, por favor  da clic <a href="{{link}}">aqui<a/>
 													</p>
 
 													</div>
