--- a/templates/flotillas/index.html.twig
+++ b/templates/flotillas/index.html.twig
@@ -73,6 +73,10 @@
                             <a title="usuarios" href="{{ path('flotillas_usuarios', {'id': flotilla.id}) }}">
                                 <i class="fa fa-fw fa-user"></i>
                             </a>
+
+                            <a title="clientes" href="{{ path('flotillas_clientes', {'id': flotilla.id}) }}">
+                                <i class="fa fa-fw fa-wallet"></i>
+                            </a>
                             
                         </td>
                     </tr>
